temporary commit to switch branches

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta tags for making website for mobile-->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
+    <!-- Meta tags for making website for mobile-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
 
 
-  <meta charset="UTF-8">
-  <title>Index</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <title>Index</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"
+            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+            integrity="sha256-T0Vest3yCU7pafRw9rsettMBX6JkKN06dqBnpQ8d30="
+            crossorigin="anonymous"></script>
 
 
-  <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
+    <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
 
 
 </head>
 <body>
 <h1>Assignment Home Page</h1>
 <div class="container">
-  <ul><a href="views/user/login.html">                login.html                </a>   </ul>
-  <ul><a href="views/page/page-edit.html">            page-edit.html            </a>   </ul>
-  <ul><a href="views/page/page-list.html">            page-list.html            </a>   </ul>
-  <ul><a href="views/page/page-new.html">             page-new.html             </a>   </ul>
-  <ul><a href="views/user/profile.html">              profile.html              </a>   </ul>
-  <ul><a href="views/user/register.html">             register.html             </a>   </ul>
-  <ul><a href="views/website/website-edit.html">         website-edit.html         </a></ul>
-  <ul><a href="views/website/website-list.html">         website-list.html         </a></ul>
-  <ul><a href="views/website/website-new.html">          website-new.html          </a></ul>
-  <ul><a href="views/widget/widget-choose.html">        widget-choose.html        </a></ul>
-  <ul><a href="views/widget/widget-heading.html">       widget-heading.html       </a></ul>
-  <ul><a href="views/widget/widget-image.html">         widget-image.html         </a></ul>
-  <ul><a href="views/widget/widget-list.html">          widget-list.html          </a></ul>
-  <ul><a href="views/widget/widget-youtube.html">       widget-youtube.html       </a></ul>
+    <ul><a href="views/user/login.html"> login.html </a></ul>
+    <ul><a href="views/page/page-edit.html"> page-edit.html </a></ul>
+    <ul><a href="views/page/page-list.html"> page-list.html </a></ul>
+    <ul><a href="views/page/page-new.html"> page-new.html </a></ul>
+    <ul><a href="views/user/profile.html"> profile.html </a></ul>
+    <ul><a href="views/user/register.html"> register.html </a></ul>
+    <ul><a href="views/website/website-edit.html"> website-edit.html </a></ul>
+    <ul><a href="views/website/website-list.html"> website-list.html </a></ul>
+    <ul><a href="views/website/website-new.html"> website-new.html </a></ul>
+    <ul><a href="views/widget/widget-choose.html"> widget-choose.html </a></ul>
+    <ul><a href="views/widget/widget-heading.html"> widget-heading.html </a></ul>
+    <ul><a href="views/widget/widget-image.html"> widget-image.html </a></ul>
+    <ul><a href="views/widget/widget-list.html"> widget-list.html </a></ul>
+    <ul><a href="views/widget/widget-youtube.html"> widget-youtube.html </a></ul>
 </div>
 </body>
 </html>
